src/objects/PRStateProvinceEmirates__c.object
<CustomObject>
    <description>Used for State/Province/Emirate in Projects.  (Removed looking up Country) but looks up GSA &amp; EPA Region also</description>
    <fields>
        <fullName>PR_AECOM_Region__c</fullName>
        <formula>Project_StateProvEmirate__r.AECOM_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR AECOM Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Country__c</fullName>
        <formula>Project_StateProvEmirate__r.Country__c</formula>
        <label>PR Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_EPA_Region__c</fullName>
        <formula>Project_StateProvEmirate__r.EPA_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR EPA Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_GSA_Region__c</fullName>
        <formula>Project_StateProvEmirate__r.GSA_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR GSA Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRelated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Related</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>PR_State_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_StateProvEmirate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project State/Province/EmirateOR Country</label>
        <referenceTo>ValidState__c</referenceTo>
        <relationshipLabel>PR State/Province/Emirates</relationshipLabel>
        <relationshipName>PR_State_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PR State/Province/Emirate</label>
    <nameField>
        <displayFormat>STCO-{0000}</displayFormat>
        <label>PR STCT Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PR State/Province/Emirates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>